[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/DashBoss.gd" type="Script" id=2]

[node name="DashBoss" groups=[
"bosses",
] instance=ExtResource( 1 )]

scale = Vector2( 3, 3 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
max_health = 300
points = 10

[node name="CollisionShape2D" parent="." index="0"]

_sections_unfolded = [ "Transform" ]

[node name="Sprite" parent="." index="1"]

modulate = Color( 0, 0.211765, 0.494118, 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="SpawnTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AttackCooldownTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ChargeTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="BlinkTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_DashBoss_area_entered"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]

[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]

[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]


